--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,51 +1,59 @@
 steps:
   - name: "gcr.io/cloud-builders/git"
-    args: ["clone", "https://github.com/DominikDO98/Map-GameJS.git"]
-
-  - name: "gcr.io/cloud-builders/docker"
     args:
       [
-        "build",
-        "-t",
-        "us-central1-docker.pkg.dev/$PROJECT_ID/my-docker-repo/map:latest",
-        "./map",
+        "clone",
+        "--branch",
+        "main",
+        "git@github.com:DominikDO98/Map-GameJS.git",
+        "map",
       ]
 
   - name: "gcr.io/cloud-builders/git"
-    args: ["clone", "https://github.com/DominikDO98/Score-GameJS.git"]
+    args:
+      [
+        "clone",
+        "--branch",
+        "main",
+        "git@github.com:DominikDO98/Score-GameJS.git",
+        "score",
+      ]
 
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "build",
         "-t",
-        "us-central1-docker.pkg.dev/$PROJECT_ID/my-docker-repo/score:latest",
-        "./score",
+        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/map:latest",
+        "map",
+      ]
+
+  - name: "gcr.io/cloud-builders/docker"
+    args:
+      [
+        "build",
+        "-t",
+        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/score:latest",
+        "score",
       ]
 
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "push",
-        "us-central1-docker.pkg.dev/$PROJECT_ID/my-docker-repo/map:latest",
+        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/map:latest",
       ]
-
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "push",
-        "us-central1-docker.pkg.dev/$PROJECT_ID/my-docker-repo/score:latest",
+        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/score:latest",
       ]
 
   - name: "gcr.io/cloud-builders/gcloud"
-    entrypoint: bash
     args:
-      - -c
-      - |
-        gcloud compute ssh my-vm-name \
-          --zone=us-central1-a \
-          --command="cd /docker && docker compose pull && docker compose up -d --remove-orphans"
-
-images:
-  - "us-central1-docker.pkg.dev/$PROJECT_ID/my-docker-repo/map:latest"
-  - "us-central1-docker.pkg.dev/$PROJECT_ID/my-docker-repo/score:latest"
+      - "compute"
+      - "ssh"
+      - "vm-mongo-rabbit"
+      - "--command"
+      - "cd ~/docker && docker compose pull && docker compose up -d --remove-orphans"
