Fix: fixed regions

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -24,7 +24,7 @@ steps:
       [
         "build",
         "-t",
-        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/map:latest",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/game-repo/map:latest",
         "map",
       ]
 
@@ -33,22 +33,16 @@ steps:
       [
         "build",
         "-t",
-        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/score:latest",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/game-repo/score:latest",
         "score",
       ]
 
   - name: "gcr.io/cloud-builders/docker"
     args:
-      [
-        "push",
-        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/map:latest",
-      ]
+      ["push", "us-central1-docker.pkg.dev/$PROJECT_ID/game-repo/map:latest"]
   - name: "gcr.io/cloud-builders/docker"
     args:
-      [
-        "push",
-        "europe-central2-docker.pkg.dev/$PROJECT_ID/game-repo/score:latest",
-      ]
+      ["push", "us-central1-docker.pkg.dev/$PROJECT_ID/game-repo/score:latest"]
 
   - name: "gcr.io/cloud-builders/gcloud"
     args:
