--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,11 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
 
   map:
-    image: us-central1-docker.pkg.dev/PROJECT_ID/game-repo/map:latest
+    image: us-central1-docker.pkg.dev/${PROJECT_ID}/game-repo/map:latest
     depends_on: [rabbitmq]
 
   score:
-    image: us-central1-docker.pkg.dev/PROJECT_ID/game-repo/score:latest
+    image: us-central1-docker.pkg.dev/${PROJECT_ID}/game-repo/score:latest
     depends_on: [rabbitmq, mongodb]
 
 volumes:
